--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -1,10 +1,13 @@
 @import 'themes';
 @import 'defaults';
 
+// See settings-v2 for template examples
 .m-formWrapper {
   ////////////////////////////////////////////
   // LAYOUTS /////////////////////////////////
   ////////////////////////////////////////////
+  // The form input and submit button
+  // are on a single line
   .m-formLayout--buttonInline {
     display: flex;
     flex-flow: row wrap;
@@ -30,6 +33,7 @@
       input:not(.m-phoneInput__input),
       minds-country-input,
       m-phoneInput,
+      textarea,
       .m-dateDropdowns__selectWrapper,
       select:not(.m-dateDropdowns__select),
       .m-form__row--validation {
@@ -40,6 +44,31 @@
           flex: 1 1 100%;
           min-width: 100%;
           max-width: 100%;
+        }
+      }
+    }
+    &.m-formLayout--hasDescriptors {
+      .stretchedField {
+        &.m-form__field--text {
+          .m-form__row--input {
+            @media screen and (max-width: 1000px) {
+              flex-flow: row wrap;
+            }
+          }
+        }
+        label,
+        input:not(.m-phoneInput__input),
+        minds-country-input,
+        m-phoneInput,
+        textarea,
+        .m-dateDropdowns__selectWrapper,
+        select:not(.m-dateDropdowns__select),
+        .m-form__row--validation {
+          @media screen and (max-width: 1000px) {
+            flex: 1 1 100%;
+            min-width: 100%;
+            max-width: 100%;
+          }
         }
       }
     }
@@ -140,7 +169,7 @@
         .m-tooltip--bubble {
           bottom: 18px;
           margin-left: 12px;
-          font-weight: 400;
+          font-weight: 300;
         }
       }
     }
@@ -161,20 +190,6 @@
       @include m-theme() {
         color: themed($m-textColor--primary);
       }
-      m-tooltip {
-        .m-tooltip > span {
-          @include m-theme() {
-            color: themed($m-textColor--tertiary);
-          }
-        }
-        .m-tooltip--bubble {
-          font-weight: 300;
-          @include m-theme() {
-            background-color: themed($m-blue);
-            color: themed($m-white);
-          }
-        }
-      }
     }
     &[class*='--validation'] {
       margin-top: 3px;
@@ -187,6 +202,30 @@
         @include m-theme() {
           color: themed($m-alert);
         }
+      }
+    }
+    @media screen and (max-width: 1000px) {
+      label,
+      input,
+      textarea,
+      m-formDescriptor {
+        flex: 1 1 100%;
+        min-width: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+  m-tooltip {
+    .m-tooltip > span {
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
+    .m-tooltip--bubble {
+      font-weight: 300;
+      @include m-theme() {
+        background-color: themed($m-blue);
+        color: themed($m-white);
       }
     }
   }
@@ -218,7 +257,17 @@
       flex: 1 1 100%;
     }
   }
-  input:not([type='checkbox']) {
+  input {
+    outline: 0;
+  }
+
+  input[type='text'],
+  input[type='password'] {
+    max-height: 42px;
+  }
+  input[type='text'],
+  input[type='password'],
+  textarea {
     cursor: text;
   }
   select,
@@ -226,7 +275,27 @@
     cursor: pointer;
   }
 
-  input:not([type='checkbox']),
+  input[type='radio'] {
+    margin: 0 24px 12px 0;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  input[type='file'] {
+    position: absolute;
+    -webkit-appearance: none;
+    width: 0.1px;
+    height: 0.1px;
+    z-index: -1;
+    opacity: 0.01;
+    top: -1px;
+    left: -1px;
+  }
+
+  input[type='text'],
+  input[type='password'],
+  textarea,
   select {
     outline: 0;
     font-size: 15px;
@@ -241,8 +310,62 @@
       color: themed($m-textColor--primary);
     }
   }
+  select:not(.m-dateDropdowns__select) {
+    box-sizing: border-box;
+    outline: 0;
+    min-height: 42px;
+    height: 42px;
+    padding: 10px 20px;
+    border-radius: 2px;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 300;
+    @include m-theme() {
+      background-color: themed($m-bgColor--secondary);
+      color: themed($m-textColor--primary);
+    }
+  }
+  &::before {
+    margin: 3px 4px 0 0;
+    @include m-theme() {
+      color: themed($m-textColor--tertiary);
+    }
+  }
+
+  textarea {
+    appearance: none;
+    height: 6em;
+    resize: none;
+    outline: 0;
+
+    &.m-form__codeTextarea {
+      cursor: default;
+      font-family: monospace;
+      font-weight: 300;
+      height: 12em;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
+  }
+  input,
+  textarea {
+    &:not(:read-only):not(:-moz-read-only) {
+      cursor: default;
+    }
+    // TODOOJM
+    // &:not(.m-draggableList__cell) {
+    //   &.ng-invalid.form-control {
+    //     @include m-theme() {
+    //       border-color: themed($m-alert) !important;
+    //     }
+    //   }
+    // }
+  }
+
   input:not(.m-phoneInput__input),
   .m-phoneInput__wrapper,
+  textarea,
   select {
     border-radius: 2px;
     @include m-theme() {
@@ -254,6 +377,15 @@
         @include m-theme() {
           border-color: themed($m-blue);
         }
+      }
+    }
+  }
+
+  .m-form__field--color {
+    .m-form__row--input {
+      input {
+        width: 120px;
+        box-sizing: border-box;
       }
     }
   }
@@ -275,21 +407,52 @@
       }
     }
   }
-  .m-form__field--select {
-    .m-form__row--input {
-      &::after {
-        content: '\25bc';
-        font-size: 10px;
-        padding: 10px;
-        position: absolute;
-        right: 0;
-        top: 0;
-        text-align: center;
-        pointer-events: none;
+  // TODOOJM
+  // .m-form__field--select {
+  //   .m-form__row--input {
+  //     &::after {
+  //       content: '\25bc';
+  //       font-size: 10px;
+  //       padding: 10px;
+  //       position: absolute;
+  //       right: 0;
+  //       top: 0;
+  //       text-align: center;
+  //       pointer-events: none;
 
-        @include m-theme() {
-          color: themed($m-grey-200);
-        }
+  //       @include m-theme() {
+  //         color: themed($m-textColor--tertiary);
+  //       }
+  //     }
+  //   }
+  // }
+
+  [class*='m-form__field--'] {
+    position: relative;
+    // margin-bottom: 28px;
+    // font-size: 15px;
+    // line-height: 20px;
+    // font-weight: 300;
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+    }
+    // &:last-child {
+    //   margin-bottom: 42px;
+    // }
+    // &.hasValidationRow {
+    //   &:not(:last-child) {
+    //     margin-bottom: 6px;
+    //   }
+    // }
+
+    &.m-form__field--checkbox,
+    &.m-form__field--radio {
+      align-items: center;
+      flex-flow: row wrap;
+    }
+    &.m-form__field--radio {
+      .m-form__row--label {
+        margin-bottom: 21px;
       }
     }
   }
@@ -306,25 +469,52 @@
     }
   }
 
-  select:not(.m-dateDropdowns__select) {
-    box-sizing: border-box;
-    outline: 0;
-    min-height: 42px;
-    height: 42px;
-    padding: 10px 20px;
-    border-radius: 2px;
-    font-size: 15px;
-    line-height: 20px;
-    font-weight: 300;
-    @include m-theme() {
-      background-color: themed($m-white);
-      color: themed($m-textColor--primary);
-    }
-  }
-  &::before {
-    margin: 3px 4px 0 0;
-    @include m-theme() {
-      color: themed($m-textColor--tertiary);
+  .m-form__field--grid {
+    .m-form__row--label {
+      button {
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 300;
+        border-radius: 2px;
+        padding: 4px 12px;
+        transition: all 0.3s ease;
+        margin-left: auto;
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+          border: 1px solid themed($m-borderColor--primary);
+          background-color: themed($m-bgColor--secondary);
+        }
+        &:hover {
+          transform: scale(1.04);
+          @include m-theme() {
+            box-shadow: 0 3px 2px -5px rgba(themed($m-black), 0.1),
+              0 2px 2px 0 rgba(themed($m-black), 0.04),
+              0 1px 4px 0 rgba(themed($m-black), 0.05);
+          }
+        }
+        &:active {
+          transform: scale(0.98);
+          @include m-theme() {
+            box-shadow: 0 3px 1px -6px rgba(themed($m-black), 0.12),
+              0 0px 1px 0 rgba(themed($m-black), 0.07),
+              0 1px 2px 0 rgba(themed($m-black), 0.08);
+          }
+        }
+
+        &:disabled,
+        &[disabled] {
+          cursor: default;
+          @include m-theme() {
+            color: themed($m-textColor--tertiary);
+          }
+          &:hover {
+            @include m-theme() {
+              border-color: themed($m-borderColor--primary);
+            }
+          }
+        }
+      }
     }
   }
 
@@ -367,8 +557,10 @@
         box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
       }
       &:focus {
-        @include m-theme() {
-          border: 1px solid themed($m-blue);
+        &:not(:read-only) {
+          @include m-theme() {
+            border: 1px solid themed($m-blue);
+          }
         }
       }
       @media screen and (max-width: $max-mobile) {
@@ -376,9 +568,202 @@
       }
     }
   }
+  m-formDescriptor {
+    box-sizing: border-box;
+    flex: 1 0 160px;
+    min-width: 160px;
+    .m-formDescriptor {
+      margin-left: 33px;
+      padding-left: 14px;
+      font-size: 15px;
+      line-height: 20px;
+    }
+    @media screen and (max-width: 1000px) {
+      .m-formDescriptor {
+        margin: 16px 0 0 0;
+        font-size: 14px;
+      }
+    }
+  }
+  .m-form__colorPreview {
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    margin-left: 15px;
+    border-radius: 2px;
+    transition: background-color 0.2s ease;
+    @include m-theme() {
+      box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
+      border: 1px solid themed($m-borderColor--primary);
+    }
+    input {
+      visibility: hidden;
+    }
+  }
+
+  [class*='m-form__filePreview'] {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    border-radius: 2px;
+    cursor: pointer;
+    margin: 0;
+    @include m-theme() {
+      box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
+    }
+
+    &[class*='--logo'] {
+      padding: 16px;
+      > img {
+        max-width: 100%;
+        max-height: 100px;
+        object-fit: contain;
+      }
+    }
+
+    &[class*='--background'] {
+      width: 480px;
+      height: 270px;
+
+      @include m-theme() {
+        background: rgba(themed($m-black-always), 0.3);
+      }
+      > img {
+        width: 480px;
+        height: 270px;
+        object-fit: cover;
+      }
+    }
+    &[class*='Overlay'] {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 5;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: opacity 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+      @include m-theme() {
+        background: rgba(themed($m-black-always), 0.4);
+      }
+      &:hover {
+        opacity: 1;
+      }
+      &.m-form__filePreviewOverlay--show {
+        opacity: 0.6;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+
+    > i.material-icons {
+      font-size: 3em;
+      @include m-theme() {
+        color: themed($m-white-always);
+      }
+    }
+  }
+
+  ////////////////////////////////////////////
+  // CUSTOM INPUTS  //////////////////////////
+  ////////////////////////////////////////////
+  [class*='m-form__customInputWrapper'] {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    &[class*='__radio'] {
+      margin: 0 24px 12px 0;
+      padding-left: 30px;
+    }
+
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+      &:checked ~ [class*='m-form__customInput'] {
+        &[class*='__checkbox'] {
+          @include m-theme() {
+            background-color: themed($m-blue);
+          }
+        }
+        &:after {
+          display: block;
+        }
+      }
+    }
+    [class*='m-form__customInput'] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 20px;
+      width: 20px;
+      transition: all 0.3s ease;
+      @include m-theme() {
+        background-color: themed($m-bgColor--secondary);
+        border: 1px solid themed($m-borderColor--primary);
+      }
+      &[class*='__checkbox'] {
+        border-radius: 2px;
+        @include m-theme() {
+          background-color: themed($m-bgColor--secondary);
+        }
+        &:after {
+          left: 7px;
+          top: 2px;
+          width: 5px;
+          height: 12px;
+          @include m-theme() {
+            border: 1px solid themed($m-white);
+            border-top: none;
+            border-left: none;
+          }
+        }
+      }
+      &[class*='__radio'] {
+        border-radius: 50%;
+        @include m-theme() {
+          background-color: themed($m-grey-50);
+        }
+        &:after {
+          border-radius: 50%;
+          left: 3px;
+          top: 3px;
+          width: 0px;
+          height: 0px;
+          @include m-theme() {
+            border: 7px solid themed($m-blue);
+          }
+        }
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        display: none;
+
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+    }
+  }
 }
 
-// Legacy /////////////////////////////////////////////////////
+////////////////////////////////////////////
+// LEGACY //////////////////////////////////
+////////////////////////////////////////////
 .m-h1-input {
   font-size: 56px;
   border: 0;
