corrections to popover password validation message

--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -33,7 +33,10 @@
       <div
         class="m-form__row--input"
         [ngClass]="{
-          invalid: newPassword.dirty && !newPasswordValid
+          invalid:
+            newPassword.dirty &&
+            !newPassword.hasError('required') &&
+            !newPasswordValid
         }"
       >
         <m-popover (change)="onPopoverChange($event)" #popover>
