--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -1,24 +1,25 @@
-<div class="m-settingsV2">
+<!-- <div class="m-settingsV2"> -->
+<div class="m-settingsV2 m-page m-pageLayout__container">
   <m-nestedMenu
-    class="m-settingsV2__mainMenu"
+    class="m-settingsV2__mainMenu m-pageLayout__pane--right"
     [ngClass]="{ showMainMenuOnMobile: showMainMenuOnMobile }"
     [menus]="mainMenus"
     (itemSelected)="showMainMenuOnMobile = false"
   ></m-nestedMenu>
   <div
     *ngIf="init"
-    class="m-settingsV2__secondaryPanel"
+    class="m-settingsV2__secondaryPane m-pageLayout__pane--main"
     [ngClass]="{ showSecondaryMenuOnMobile: !showMainMenuOnMobile }"
   >
     <m-nestedMenu
-      *ngIf="secondaryPanelIsMenu"
+      *ngIf="secondaryPaneIsMenu"
       class="m-settingsV2__secondaryMenuView"
       isNested="true"
       [menus]="secondaryMenus[menuHeaderId]"
       (clickedBack)="showMainMenuOnMobile = true"
     ></m-nestedMenu>
 
-    <ng-container *ngIf="!secondaryPanelIsMenu">
+    <ng-container *ngIf="!secondaryPaneIsMenu">
       <div class="m-settingsV2__settingsView">
         <div class="m-settingsV2__headerWrapper">
           <div class="m-settingsV2__backButton">
