--- a/src/app/modules/settings-v2/account/email-address/email-address.component.html
+++ b/src/app/modules/settings-v2/account/email-address/email-address.component.html
@@ -1,1 +1,38 @@
-<p>email-address works!</p>
+<form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
+  <div class="m-form__fieldsContainer">
+    <div class="m-form__field--text stretchedField">
+      <div class="m-form__row--label">
+        <label for="email" i18n>Email Address</label>
+      </div>
+      <div
+        class="m-form__row--input"
+        [ngClass]="{
+          invalid: (form.touched || form.dirty) && email.hasError('email')
+        }"
+      >
+        <input
+          type="text"
+          id="email"
+          name="email"
+          formControlName="email"
+          class="form-control"
+          [readonly]="inProgress || !init"
+        />
+      </div>
+      <div class="m-form__row--validation">
+        <p *ngIf="(form.touched || form.dirty) && email.hasError('email')">
+          Invalid email address format.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="m-form__buttonsContainer">
+    <m-shadowboxSubmitButton
+      [disabled]="!canSubmit()"
+      [saving]="inProgress"
+      (click)="save()"
+    >
+      Save Email Address
+    </m-shadowboxSubmitButton>
+  </div>
+</form>
