--- a/src/app/modules/settings-v2/security/two-factor/two-factor.component.html
+++ b/src/app/modules/settings-v2/security/two-factor/two-factor.component.html
@@ -1,1 +1,3 @@
-<p>two-factor works!</p>
+<!-- <m-walletPhoneVerification></m-walletPhoneVerification> -->
+<m-settings--two-factor></m-settings--two-factor>
+<!-- You may disable 2FA at any point. If you’ve changed your mobile number, you will need to disable and re-enable 2FA. -->
