--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -7,7 +7,7 @@ m-settingsV2 {
     font-weight: 300;
     .m-settingsV2__mainMenu {
       flex: 0 1 269px;
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         display: none;
         flex-grow: 1;
         &.showMainMenuOnMobile {
@@ -16,10 +16,10 @@ m-settingsV2 {
       }
     }
 
-    .m-settingsV2__secondaryPanel {
+    .m-settingsV2__secondaryPane {
       flex: 1 0 340px;
       max-width: 637px;
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         display: none;
         &.showSecondaryMenuOnMobile {
           display: block;
@@ -31,16 +31,17 @@ m-settingsV2 {
     font-size: 16px;
     line-height: 21px;
     margin-top: 29px;
+    margin-bottom: 48px;
     @include m-theme() {
       color: themed($m-textColor--primary);
     }
-    @media screen and (max-width: $max-mobile) {
+    @media screen and (max-width: $layoutMax2ColWidth) {
       margin-top: 15px;
     }
     & > * {
       &:not(.m-settingsV2__headerWrapper) {
         margin: 0 71px;
-        @media screen and (max-width: $max-mobile) {
+        @media screen and (max-width: $layoutMax2ColWidth) {
           margin: 0 24px;
         }
       }
@@ -53,7 +54,7 @@ m-settingsV2 {
       line-height: 32px;
       font-weight: 400;
 
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         flex-flow: column nowrap;
         margin: 0 24px;
       }
@@ -80,7 +81,7 @@ m-settingsV2 {
           display: none;
           margin-left: 5px;
 
-          @media screen and (max-width: $max-mobile) {
+          @media screen and (max-width: $layoutMax2ColWidth) {
             display: inline-flex;
           }
         }
@@ -88,7 +89,7 @@ m-settingsV2 {
           font-size: 24px;
           line-height: inherit;
           transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-          @media screen and (max-width: $max-mobile) {
+          @media screen and (max-width: $layoutMax2ColWidth) {
             font-size: 17px;
           }
         }
@@ -102,15 +103,102 @@ m-settingsV2 {
         flex: 1 0 auto;
       }
     }
+    .m-settingsV2__subheader {
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      font-weight: 400;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+      &:not(:first-child) {
+        margin-top: 41px;
+      }
+    }
     .m-settingsV2__desc {
       margin: 11px 0 48px 0;
       @include m-theme() {
         color: themed($m-textColor--tertiary);
       }
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         font-size: 15px;
         line-height: 20px;
       }
+      a {
+        font-weight: inherit;
+        text-decoration: none;
+        @include m-theme() {
+          color: themed($m-link);
+        }
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    .m-formWrapper .m-form__fieldsContainer {
+      input,
+      select,
+      textarea {
+        @include m-theme() {
+          box-shadow: none;
+        }
+      }
+    }
+
+    m-settingsV2__password {
+      .m-form__field--text {
+        &:first-child {
+          margin-bottom: 48px;
+        }
+        &:nth-child(2) {
+          margin-bottom: 2px;
+        }
+      }
+    }
+
+    .m-formWrapper m-popover {
+      width: 100%;
+      .m-popover__content {
+        margin-top: 1.5rem;
+      }
+      input {
+        width: 100%;
+      }
+    }
+    .m-formInput__checkbox {
+      font-size: 15px;
+      line-height: 20px;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+    }
+
+    .m-formLayout--buttonLeft {
+      .m-form__buttonsContainer {
+        margin-top: 35px;
+      }
+    }
+
+    m-settingsV2__emailNotifications {
+      .m-form__field--checkbox:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+
+    // TODOOJM remove after cleanup of transplant components
+    .m-settings--section {
+      input {
+        width: 100%;
+      }
+      h4 {
+        display: none;
+      }
+    }
+    .m-settingsV2__spinner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
