add pro components

--- a/src/app/modules/settings-v2/account/email-address/email-address.component.html
+++ b/src/app/modules/settings-v2/account/email-address/email-address.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="email" i18n>Email Address</label>
       </div>
