--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>Existing Password</label>
       </div>
@@ -26,7 +26,7 @@
         </p>
       </div>
     </div>
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>New Password</label>
       </div>
@@ -65,7 +65,7 @@
         </p>
       </div>
     </div>
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>Confirm New Password</label>
       </div>
