--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -30,7 +30,9 @@
           <div class="m-settingsV2__headerLabel">{{ routeData.title }}</div>
         </div>
         <div class="m-settingsV2__viewWrapper">
-          <div class="m-settingsV2__desc">{{ routeData?.description }}</div>
+          <div class="m-settingsV2__desc" *ngIf="routeData?.description">
+            {{ routeData?.description }}
+          </div>
           <div class="m-formWrapper">
             <router-outlet (activate)="onActivate($event)"></router-outlet>
           </div>
