--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -47,31 +47,31 @@
         }
       }
     }
-    &.m-formLayout--hasDescriptors {
-      .stretchedField {
-        &.m-form__field--text {
-          .m-form__row--input {
-            @media screen and (max-width: 1000px) {
-              flex-flow: row wrap;
-            }
-          }
-        }
-        label,
-        input:not(.m-phoneInput__input),
-        minds-country-input,
-        m-phoneInput,
-        textarea,
-        .m-dateDropdowns__selectWrapper,
-        select:not(.m-dateDropdowns__select),
-        .m-form__row--validation {
-          @media screen and (max-width: 1000px) {
-            flex: 1 1 100%;
-            min-width: 100%;
-            max-width: 100%;
-          }
-        }
-      }
-    }
+    // &.m-formLayout--hasDescriptors {
+    //   .stretchedField {
+    //     &.m-form__field--text {
+    //       .m-form__row--input {
+    //         @media screen and (max-width: 1000px) {
+    //           flex-flow: row wrap;
+    //         }
+    //       }
+    //     }
+    //     label,
+    //     input:not(.m-phoneInput__input),
+    //     minds-country-input,
+    //     m-phoneInput,
+    //     textarea,
+    //     .m-dateDropdowns__selectWrapper,
+    //     select:not(.m-dateDropdowns__select),
+    //     .m-form__row--validation {
+    //       @media screen and (max-width: 1000px) {
+    //         flex: 1 1 100%;
+    //         min-width: 100%;
+    //         max-width: 100%;
+    //       }
+    //     }
+    //   }
+    // }
   }
 
   .m-formLayout--buttonRight,
@@ -174,6 +174,7 @@
       }
     }
   }
+
   [class*='m-form__row'] {
     display: flex;
     flex-flow: row wrap;
@@ -194,6 +195,9 @@
     &[class*='--validation'] {
       margin-top: 3px;
       min-height: 22px;
+      @include m-theme() {
+        color: themed($m-alert);
+      }
       p {
         font-size: 14px;
         line-height: 19px;
@@ -215,6 +219,7 @@
       }
     }
   }
+
   m-tooltip {
     .m-tooltip > span {
       @include m-theme() {
@@ -223,9 +228,21 @@
     }
     .m-tooltip--bubble {
       font-weight: 300;
+      letter-spacing: 1px;
       @include m-theme() {
         background-color: themed($m-blue);
         color: themed($m-white);
+      }
+    }
+  }
+  .m-form__row--input {
+    &.invalid {
+      input,
+      select,
+      .m-phoneInput__wrapper {
+        @include m-theme() {
+          border-color: themed($m-alert) !important;
+        }
       }
     }
   }
@@ -235,15 +252,6 @@
     }
     .m-form__row--input {
       flex-flow: row nowrap;
-      &.invalid {
-        input,
-        select,
-        .m-phoneInput__wrapper {
-          @include m-theme() {
-            border-color: themed($m-alert) !important;
-          }
-        }
-      }
     }
     .m-form__row--validation {
       align-self: flex-end;
@@ -260,7 +268,9 @@
   input {
     outline: 0;
   }
-
+  textarea {
+    width: 100%;
+  }
   input[type='text'],
   input[type='password'] {
     max-height: 42px;
@@ -429,7 +439,7 @@
 
   [class*='m-form__field--'] {
     position: relative;
-    // margin-bottom: 28px;
+    margin-bottom: 28px;
     // font-size: 15px;
     // line-height: 20px;
     // font-weight: 300;
@@ -439,11 +449,11 @@
     // &:last-child {
     //   margin-bottom: 42px;
     // }
-    // &.hasValidationRow {
-    //   &:not(:last-child) {
-    //     margin-bottom: 6px;
-    //   }
-    // }
+    &.hasValidationRow {
+      &:not(:last-child) {
+        margin-bottom: 2px;
+      }
+    }
 
     &.m-form__field--checkbox,
     &.m-form__field--radio {
