--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -374,6 +374,7 @@
   }
 
   input:not(.m-phoneInput__input),
+  input:not(.m-draggableList__cell),
   .m-phoneInput__wrapper,
   textarea,
   select {
