--- a/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
+++ b/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
@@ -1,6 +1,81 @@
-<!-- <div class="m-settingsV2__desc">
-  Set up your category filter hashtags
+<div class="m-settingsV2__desc">
+  Set up your category filter hashtags.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
   >
-</div> -->
+</div>
+<form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
+  <div
+    class="m-form__fieldsContainer containsDragDrop"
+    formArrayName="hashtags"
+  >
+    <div class="m-form__field--grid">
+      <div class="m-form__row--label">
+        <label i18n>Hashtags</label>
+        <m-tooltip
+          ><span m-tooltip--anchor>𝒊</span>
+          <ng-container i18n
+            >Create a topbar of links to provide easy access to site contents
+            that share a hashtag</ng-container
+          ></m-tooltip
+        ><button
+          type="button"
+          (click)="addBlankTag()"
+          data-minds="addHashtag"
+          i18n
+        >
+          Add
+        </button>
+      </div>
+      <div class="m-form__row--input" *ngIf="form.value.hashtags.length > -1">
+        <m-draggableList
+          [headers]="['Label', '#Hashtag']"
+          [data]="form.value.hashtags"
+          [id]="'tag'"
+          (emptyListHeaderRowClicked)="addBlankTag()"
+          (arrayChanged)="setTags($event)"
+          #hashtagDraggable
+        >
+          <ng-template let-tag="item" let-i="i">
+            <ng-container [formGroupName]="i">
+              <input
+                class="m-draggableList__cell form-control"
+                type="text"
+                [id]="'tag-label-' + i"
+                [name]="'tag[' + i + '][label]'"
+                formControlName="label"
+                autofocus
+                [attr.data-minds]="'tag__label--' + i"
+                (focusin)="hashtagDraggable.onFocusIn($event)"
+                (focusout)="hashtagDraggable.onFocusOut($event)"
+                (mouseover)="hashtagDraggable.onFocusIn($event)"
+                (mouseout)="hashtagDraggable.onFocusOut($event)"
+              />
+              <input
+                class="m-draggableList__cell form-control"
+                type="text"
+                [id]="'tag-tag-' + i"
+                [name]="'tag[' + i + '][tag]'"
+                formControlName="tag"
+                [attr.data-minds]="'tag__tag--' + i"
+                (focusin)="hashtagDraggable.onFocusIn($event)"
+                (focusout)="hashtagDraggable.onFocusOut($event)"
+                (mouseover)="hashtagDraggable.onFocusIn($event)"
+                (mouseout)="hashtagDraggable.onFocusOut($event)"
+              />
+            </ng-container>
+          </ng-template>
+        </m-draggableList>
+      </div>
+    </div>
+  </div>
+  <div class="m-form__buttonsContainer">
+    <m-shadowboxSubmitButton
+      [disabled]="!canSubmit()"
+      [saving]="inProgress"
+      (click)="submit()"
+    >
+      Save Hashtags
+    </m-shadowboxSubmitButton>
+  </div>
+</form>
