make checkbox background blue on check

--- a/src/app/common/components/forms/checkbox/checkbox.component.scss
+++ b/src/app/common/components/forms/checkbox/checkbox.component.scss
@@ -38,8 +38,8 @@ m-formInput__checkbox {
       -ms-transform: rotate(45deg);
       transform: rotate(45deg);
 
-      left: 7px;
-      top: 2px;
+      left: 8px;
+      top: 3px;
       width: 5px;
       height: 12px;
 
@@ -59,14 +59,16 @@ m-formInput__checkbox {
     height: 0;
     width: 0;
 
-    &:checked ~ .m-formInputCheckbox__custom {
-      @include m-theme() {
-        background-color: themed($m-blue);
-        border-color: themed($m-blue);
-      }
+    &:checked ~ .m-formInputCheckbox__visibleWrapper {
+      .m-formInputCheckbox__custom {
+        @include m-theme() {
+          background-color: themed($m-blue);
+          border-color: themed($m-blue);
+        }
 
-      &:after {
-        display: block;
+        &:after {
+          display: block;
+        }
       }
     }
   }
